k8s/nodeapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
